--- a/LaxStats_Admin_panel/App.xaml
+++ b/LaxStats_Admin_panel/App.xaml
@@ -12,5 +12,8 @@
         <DataTemplate DataType="{x:Type viewmodels:TeamViewModel}">
             <view:TeamView/>
         </DataTemplate>
+        <DataTemplate DataType="{x:Type viewmodels:CreateLeagueViewModel}">
+            <view:CreateLeagueView/>
+        </DataTemplate>
     </Application.Resources>
 </Application>
