--- a/LaxStats_Admin_panel/MainWindow.xaml
+++ b/LaxStats_Admin_panel/MainWindow.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:LaxStats_Admin_panel"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
+        Title="MainWindow" Height="720" Width="1280">
     <Grid>
         <Grid.ColumnDefinitions>
             <ColumnDefinition></ColumnDefinition>
@@ -33,7 +33,7 @@
                 </DataTemplate>
             </ItemsControl.ItemTemplate>
         </ItemsControl>
-        <ContentControl Content="{Binding SelectedViewModel}" Grid.Column="3" Grid.Row="2"/>
+        <ContentControl Content="{Binding SelectedViewModel}" Grid.Column="0" Grid.Row="0" Grid.RowSpan="4" Grid.ColumnSpan="4"/>
         <ContentControl x:Name="AddTeamView" Grid.Column="3" Grid.Row="1"></ContentControl>
     </Grid>
 </Window>
