--- a/LaxStats_Admin_panel/View/LeagueView.xaml
+++ b/LaxStats_Admin_panel/View/LeagueView.xaml
@@ -6,12 +6,38 @@
              xmlns:local="clr-namespace:LaxStats_Admin_panel.View"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
+    <UserControl.Resources>
+        <!-- Definicja niestandardowego szablonu dla ListBoxItem -->
+        <DataTemplate x:Key="LeagueItemTemplate">
+            <StackPanel Orientation="Horizontal" Margin="10">
+                <TextBlock Text="{Binding Number}" VerticalAlignment="Center" HorizontalAlignment="Center" Width="50" Height="50" Background="AliceBlue"></TextBlock>
+                <TextBlock Text="{Binding Name}" VerticalAlignment="Center" Margin="5,0,0,0"/>
+            </StackPanel>
+        </DataTemplate>
+    </UserControl.Resources>
     <Grid>
         <Grid.RowDefinitions>
-                <RowDefinition></RowDefinition>
-                <RowDefinition></RowDefinition>
+                <RowDefinition Height="0.2*"></RowDefinition>
+                <RowDefinition Height="1*"></RowDefinition>
+                <RowDefinition Height="1*"></RowDefinition>
+                <RowDefinition Height="0.3*"></RowDefinition>
+                <RowDefinition Height="0.2*"></RowDefinition>
             </Grid.RowDefinitions>
-            <Button Grid.Row="0" Margin="10" Width="200" Content="Team" Command="{Binding UpdateViewCommand}" CommandParameter="Team"></Button>
-        <Button Grid.Row="1" Margin="10" Width="200" Content="{Binding Napis}" Command="{Binding TestV2}" CommandParameter="Team"></Button>
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="0.2*"></ColumnDefinition>
+            <ColumnDefinition Width="1*"></ColumnDefinition>
+            <ColumnDefinition Width="1*"></ColumnDefinition>
+            <ColumnDefinition Width="0.2*"></ColumnDefinition>
+        </Grid.ColumnDefinitions>
+            <Button Grid.Row="0" Width="50" Height="25" Content="Back" Command="{Binding UpdateViewCommand}" CommandParameter="Team"></Button>
+        <ListBox x:Name="LeagueBox" Grid.Row="1" Grid.Column="1" Grid.RowSpan="2" Grid.ColumnSpan="2"
+                 ItemTemplate="{StaticResource LeagueItemTemplate}"
+                 ItemsSource="{Binding League}"
+                 />
+        <Button x:Name="AddLeagueButton" Grid.Column="1" Grid.Row="3" Grid.ColumnSpan="2" HorizontalAlignment="Center" VerticalAlignment="Center"
+                Command="{Binding UpdateViewCommand}"
+                Content="Create new league"
+                CommandParameter="AddLeague"
+                Padding="15"></Button>
     </Grid>
 </UserControl>
